@@ -2,6 +2,8 @@ import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
+
+
 plugins {
     alias(libs.plugins.kotlinMultiplatform)
     alias(libs.plugins.androidApplication)
@@ -17,9 +19,16 @@ kotlin {
             jvmTarget.set(JvmTarget.JVM_11)
         }
     }
+
     
 
-    jvm("desktop")
+    jvm("desktop") {
+
+    }
+
+    jvmToolchain { // Configura la toolchain para todos los targets JVM de Kotlin
+        languageVersion.set(JavaLanguageVersion.of(21)) // O 17, 21
+    }
     
     sourceSets {
         val desktopMain by getting
@@ -28,6 +37,9 @@ kotlin {
             implementation(compose.preview)
             implementation(libs.androidx.activity.compose)
             implementation(project(":pythonrunner"))
+            implementation(libs.androidx.media3.transformer)
+            implementation(libs.androidx.media3.effect)
+            implementation(libs.androidx.media3.common)
 
         }
         commonMain.dependencies {
@@ -49,7 +61,6 @@ kotlin {
             implementation(libs.kotlinx.coroutines.swing)
             implementation(libs.ktor.client.java.v301)
             implementation(libs.kotlinx.coroutines.swing.v190)
-
         }
     }
 }
@@ -79,6 +90,13 @@ android {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
+
+    sourceSets {
+        getByName("main"){
+            jniLibs.srcDir("src/androidMain/jniLibs")
+        }
+    }
+
 }
 
 dependencies {
@@ -92,7 +110,8 @@ dependencies {
     implementation(libs.androidx.media3.exoplayer)
 
 
-    debugImplementation(compose.uiTooling)
+
+    //debugImplementation(compose.uiTooling)
 }
 
 compose.desktop {
@@ -100,9 +119,37 @@ compose.desktop {
         mainClass = "org.alexmagter.QuickYTD.MainKt"
 
         nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "org.alexmagter.QuickYTD"
-            packageVersion = "1.0.0"
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Exe, TargetFormat.Deb)
+            packageName = "QuickYTD"
+            packageVersion = "1.2.0"
+            vendor = "Alex_magter"
+
+            jvmArgs += listOf("--module-path", "app/libs") // Ajusta si tus JARs están en otra subcarpeta dentro del bundle
+            // La siguiente línea es para pasar opciones directamente a jpackage,
+
+            args += listOf("--add-modules", "java.base,java.desktop,java.logging,jdk.crypto.ec,jdk.unsupported")
+
+
+
+            windows {
+                // Esta es la propiedad válida para Windows
+
+                includeAllModules = true
+                menuGroup = "AlexMagter"
+                // Opcional: define nombre del acceso directo
+                shortcut = true
+
+                // iconFile.set(...)
+            }
+
+            macOS {
+                bundleID = "com.miempresa.miapp"
+                // iconFile.set(...)
+            }
+
+            linux {
+                // iconFile.set(...)
+            }
         }
     }
 }
